# Identificador de la aplicación
appId: dev.donmanuel.never_forgett
---
- launchApp  # Inicia la aplicación

# Navegación a la sección de notificaciones
- tapOn: "Profile\nTab 3 of 3"  # Toca la pestaña de Perfil (tercera pestaña)
- tapOn: "Notifications"        # Toca el botón de Notificaciones

# Acciones de prueba de notificaciones
- tapOn: "Schedule Test Notification (5 seconds)"  # Programa una notificación de prueba que aparecerá en 5 segundos
- tapOn: "Show Pending Notifications"              # Muestra las notificaciones pendientes
- tapOn: "Close"                                  # Cierra la vista actual
